last.log
[[33mWarning [0m] Parallelism is disabled.
[[31m Error  [0m] Set.scala:269:28: error: not enough arguments for method subSize: (xs: stainless.collection.List[T], x: T)Boolean.
[[31m Error  [0m] Unspecified value parameter x.
             }.holds because { subSize(xs.list) }
                                      [31m^[0m
[[34m  Info  [0m] Cycle took 3922 ms
[[34m  Info  [0m] 
[[34m  Info  [0m] 
[[34m  Info  [0m] Waiting for source changes...
[[34m  Info  [0m] 
[[34m  Info  [0m] 
